--- a/css/home.css
+++ b/css/home.css
@@ -17,7 +17,27 @@ body {
   width: auto;
 }
 
+.map-container {
+  position: relative;
+  width: 100%;
+  padding-top: 50%; 
+  height: 0;
+}
 
+.map-container iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border: none;
+}
+
+@media (max-width: 600px) {
+  .map-container {
+    padding-top: 100%;
+  }
+}
 .carousel-control.left,
 .carousel-control.right {
   background-image: none;
